[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/TowerSlot.gd" type="Script" id=1]
[ext_resource path="res://Tilesheet/towerDefense_tilesheet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Towers/Tower1/Tower1.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 1216, 640, 64, 64 )

[node name="TowerSlot" type="Node2D"]
script = ExtResource( 1 )
all_towers = [ ExtResource( 3 ) ]

[node name="Preview" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="Fading" type="ColorRect" parent="Preview"]
margin_left = -27.6309
margin_top = -29.2304
margin_right = 29.3691
margin_bottom = 31.7696
color = Color( 0, 0, 0, 0.494118 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildTowerButton" type="Button" parent="."]
margin_left = -29.296
margin_top = -12.3674
margin_right = 28.704
margin_bottom = 17.6326
text = "Build"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BuildTowerButton" to="." method="_on_BuildTowerButton_pressed"]
